<resources>
    <string name="app_name">FlickrReranker</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="keywords_hint">Keywords</string>
    <string name="photo_count_hint">Number of photos</string>
    <string name="date_hint">Date</string>
    <string name="latitude_hint">Latitude</string>
    <string name="longitude_hint">Longitude</string>
    <string name="tag_hint">Tags</string>
    <string name="likes_hint">Number of likes</string>
    <string name="view_hint">Number of views</string>
    <string name="edit_options">Search</string>
    <string name="submit">Submit</string>
    <string name="author_hint">Author</string>

    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
</resources>